--- a/package.json
+++ b/package.json
@@ -42,12 +42,15 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.13.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "cors": "^2.8.6",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.3.1",
     "embla-carousel-react": "^8.6.0",
+    "express": "^5.2.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
@@ -89,5 +92,10 @@
     "vite": "^5.4.19",
     "vite-tsconfig-paths": "^6.0.5",
     "vitest": "^3.2.4"
-  }
+  },
+  "description": "## Project info",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "Anastasiia_Dudka <sopiloka@gmail.com>",
+  "license": "ISC"
 }
