--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cors": "^2.8.6",
     "date-fns": "^3.6.0",
     "dotenv": "^17.3.1",
+    "emailjs-com": "^3.2.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^5.2.1",
     "input-otp": "^1.4.2",
